jmm/compiler/jmmParser.py
# Generated from jmm.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class jmmParser ( Parser ):

    grammarFileName = "jmm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'package'", "';'", "'import'", "'.'", 
                     "'public'", "'protected'", "'private'", "'static'", 
                     "'abstract'", "'class'", "'extends'", "'{'", "'}'", 
                     "'void'", "':'", "'if'", "'else'", "'while'", "'return'", 
                     "'('", "','", "')'", "'='", "'boolean'", "'char'", 
                     "'int'", "'['", "']'", "'+='", "'&&'", "'=='", "'>'", 
                     "'<='", "'instanceof'", "'+'", "'-'", "'*'", "'++'", 
                     "'!'", "'--'", "'this'", "'super'", "'new'", "'true'", 
                     "'false'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "CHAR", "STRING", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_compilationUnit = 0
    RULE_qualifiedIdentifier = 1
    RULE_typeDeclaration = 2
    RULE_modifiers = 3
    RULE_classDeclaration = 4
    RULE_classBody = 5
    RULE_memberDecl = 6
    RULE_block = 7
    RULE_blockStatement = 8
    RULE_statement = 9
    RULE_formalParameters = 10
    RULE_formalParameter = 11
    RULE_parExpression = 12
    RULE_localVariableDeclarationStatement = 13
    RULE_variableDeclarators = 14
    RULE_variableDeclarator = 15
    RULE_variableInitializer = 16
    RULE_arrayInitializer = 17
    RULE_arguments = 18
    RULE_tipe = 19
    RULE_basicType = 20
    RULE_referenceType = 21
    RULE_statementExpression = 22
    RULE_expression = 23
    RULE_assignmentExpression = 24
    RULE_conditionalAndExpression = 25
    RULE_equalityExpression = 26
    RULE_relationalExpression = 27
    RULE_additiveExpression = 28
    RULE_multiplicativeExpression = 29
    RULE_unaryExpression = 30
    RULE_simpleUnaryExpression = 31
    RULE_postfixExpression = 32
    RULE_selector = 33
    RULE_primary = 34
    RULE_creator = 35
    RULE_newArrayDeclarator = 36
    RULE_literal = 37

    ruleNames =  [ "compilationUnit", "qualifiedIdentifier", "typeDeclaration", 
                   "modifiers", "classDeclaration", "classBody", "memberDecl", 
                   "block", "blockStatement", "statement", "formalParameters", 
                   "formalParameter", "parExpression", "localVariableDeclarationStatement", 
                   "variableDeclarators", "variableDeclarator", "variableInitializer", 
                   "arrayInitializer", "arguments", "tipe", "basicType", 
                   "referenceType", "statementExpression", "expression", 
                   "assignmentExpression", "conditionalAndExpression", "equalityExpression", 
                   "relationalExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "simpleUnaryExpression", "postfixExpression", 
                   "selector", "primary", "creator", "newArrayDeclarator", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    ID=47
    INT=48
    CHAR=49
    STRING=50
    WS=51
    COMMENT=52
    LINE_COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jmmParser.EOF, 0)

        def qualifiedIdentifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.QualifiedIdentifierContext)
            else:
                return self.getTypedRuleContext(jmmParser.QualifiedIdentifierContext,i)


        def typeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.TypeDeclarationContext)
            else:
                return self.getTypedRuleContext(jmmParser.TypeDeclarationContext,i)


        def getRuleIndex(self):
            return jmmParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = jmmParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jmmParser.T__0:
                self.state = 76
                self.match(jmmParser.T__0)
                self.state = 77
                self.qualifiedIdentifier()
                self.state = 78
                self.match(jmmParser.T__1)


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jmmParser.T__2:
                self.state = 82
                self.match(jmmParser.T__2)
                self.state = 83
                self.qualifiedIdentifier()
                self.state = 84
                self.match(jmmParser.T__1)
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__4) | (1 << jmmParser.T__5) | (1 << jmmParser.T__6) | (1 << jmmParser.T__7) | (1 << jmmParser.T__8) | (1 << jmmParser.T__9))) != 0):
                self.state = 91
                self.typeDeclaration()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(jmmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QualifiedIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(jmmParser.ID)
            else:
                return self.getToken(jmmParser.ID, i)

        def getRuleIndex(self):
            return jmmParser.RULE_qualifiedIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedIdentifier" ):
                listener.enterQualifiedIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedIdentifier" ):
                listener.exitQualifiedIdentifier(self)




    def qualifiedIdentifier(self):

        localctx = jmmParser.QualifiedIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_qualifiedIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(jmmParser.ID)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 100
                    self.match(jmmParser.T__3)
                    self.state = 101
                    self.match(jmmParser.ID) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self):
            return self.getTypedRuleContext(jmmParser.ModifiersContext,0)


        def classDeclaration(self):
            return self.getTypedRuleContext(jmmParser.ClassDeclarationContext,0)


        def getRuleIndex(self):
            return jmmParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)




    def typeDeclaration(self):

        localctx = jmmParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.modifiers()
            self.state = 108
            self.classDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModifiersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jmmParser.RULE_modifiers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModifiers" ):
                listener.enterModifiers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModifiers" ):
                listener.exitModifiers(self)




    def modifiers(self):

        localctx = jmmParser.ModifiersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modifiers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__4) | (1 << jmmParser.T__5) | (1 << jmmParser.T__6) | (1 << jmmParser.T__7) | (1 << jmmParser.T__8))) != 0):
                self.state = 110
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__4) | (1 << jmmParser.T__5) | (1 << jmmParser.T__6) | (1 << jmmParser.T__7) | (1 << jmmParser.T__8))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jmmParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(jmmParser.ClassBodyContext,0)


        def qualifiedIdentifier(self):
            return self.getTypedRuleContext(jmmParser.QualifiedIdentifierContext,0)


        def getRuleIndex(self):
            return jmmParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = jmmParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(jmmParser.T__9)
            self.state = 117
            self.match(jmmParser.ID)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jmmParser.T__10:
                self.state = 118
                self.match(jmmParser.T__10)
                self.state = 119
                self.qualifiedIdentifier()


            self.state = 122
            self.classBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def modifiers(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.ModifiersContext)
            else:
                return self.getTypedRuleContext(jmmParser.ModifiersContext,i)


        def memberDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.MemberDeclContext)
            else:
                return self.getTypedRuleContext(jmmParser.MemberDeclContext,i)


        def getRuleIndex(self):
            return jmmParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)




    def classBody(self):

        localctx = jmmParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(jmmParser.T__11)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__4) | (1 << jmmParser.T__5) | (1 << jmmParser.T__6) | (1 << jmmParser.T__7) | (1 << jmmParser.T__8) | (1 << jmmParser.T__13) | (1 << jmmParser.T__23) | (1 << jmmParser.T__24) | (1 << jmmParser.T__25) | (1 << jmmParser.ID))) != 0):
                self.state = 125
                self.modifiers()
                self.state = 126
                self.memberDecl()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(jmmParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MemberDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jmmParser.ID, 0)

        def formalParameters(self):
            return self.getTypedRuleContext(jmmParser.FormalParametersContext,0)


        def block(self):
            return self.getTypedRuleContext(jmmParser.BlockContext,0)


        def tipe(self):
            return self.getTypedRuleContext(jmmParser.TipeContext,0)


        def variableDeclarators(self):
            return self.getTypedRuleContext(jmmParser.VariableDeclaratorsContext,0)


        def getRuleIndex(self):
            return jmmParser.RULE_memberDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMemberDecl" ):
                listener.enterMemberDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMemberDecl" ):
                listener.exitMemberDecl(self)




    def memberDecl(self):

        localctx = jmmParser.MemberDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_memberDecl)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(jmmParser.ID)
                self.state = 136
                self.formalParameters()
                self.state = 137
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jmmParser.T__13]:
                    self.state = 139
                    self.match(jmmParser.T__13)
                    pass
                elif token in [jmmParser.T__23, jmmParser.T__24, jmmParser.T__25, jmmParser.ID]:
                    self.state = 140
                    self.tipe()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 143
                self.match(jmmParser.ID)
                self.state = 144
                self.formalParameters()
                self.state = 147
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [jmmParser.T__11]:
                    self.state = 145
                    self.block()
                    pass
                elif token in [jmmParser.T__1]:
                    self.state = 146
                    self.match(jmmParser.T__1)
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.tipe()
                self.state = 150
                self.variableDeclarators()
                self.state = 151
                self.match(jmmParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.BlockStatementContext)
            else:
                return self.getTypedRuleContext(jmmParser.BlockStatementContext,i)


        def getRuleIndex(self):
            return jmmParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = jmmParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(jmmParser.T__11)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__1) | (1 << jmmParser.T__11) | (1 << jmmParser.T__15) | (1 << jmmParser.T__17) | (1 << jmmParser.T__18) | (1 << jmmParser.T__19) | (1 << jmmParser.T__23) | (1 << jmmParser.T__24) | (1 << jmmParser.T__25) | (1 << jmmParser.T__35) | (1 << jmmParser.T__37) | (1 << jmmParser.T__38) | (1 << jmmParser.T__40) | (1 << jmmParser.T__41) | (1 << jmmParser.T__42) | (1 << jmmParser.T__43) | (1 << jmmParser.T__44) | (1 << jmmParser.T__45) | (1 << jmmParser.ID) | (1 << jmmParser.INT) | (1 << jmmParser.CHAR) | (1 << jmmParser.STRING))) != 0):
                self.state = 156
                self.blockStatement()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(jmmParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localVariableDeclarationStatement(self):
            return self.getTypedRuleContext(jmmParser.LocalVariableDeclarationStatementContext,0)


        def statement(self):
            return self.getTypedRuleContext(jmmParser.StatementContext,0)


        def getRuleIndex(self):
            return jmmParser.RULE_blockStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)




    def blockStatement(self):

        localctx = jmmParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_blockStatement)
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.localVariableDeclarationStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(jmmParser.BlockContext,0)


        def ID(self):
            return self.getToken(jmmParser.ID, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.StatementContext)
            else:
                return self.getTypedRuleContext(jmmParser.StatementContext,i)


        def parExpression(self):
            return self.getTypedRuleContext(jmmParser.ParExpressionContext,0)


        def expression(self):
            return self.getTypedRuleContext(jmmParser.ExpressionContext,0)


        def statementExpression(self):
            return self.getTypedRuleContext(jmmParser.StatementExpressionContext,0)


        def getRuleIndex(self):
            return jmmParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = jmmParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(jmmParser.ID)
                self.state = 170
                self.match(jmmParser.T__14)
                self.state = 171
                self.statement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 172
                self.match(jmmParser.T__15)
                self.state = 173
                self.parExpression()
                self.state = 174
                self.statement()
                self.state = 177
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                if la_ == 1:
                    self.state = 175
                    self.match(jmmParser.T__16)
                    self.state = 176
                    self.statement()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 179
                self.match(jmmParser.T__17)
                self.state = 180
                self.parExpression()
                self.state = 181
                self.statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 183
                self.match(jmmParser.T__18)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__19) | (1 << jmmParser.T__35) | (1 << jmmParser.T__37) | (1 << jmmParser.T__38) | (1 << jmmParser.T__40) | (1 << jmmParser.T__41) | (1 << jmmParser.T__42) | (1 << jmmParser.T__43) | (1 << jmmParser.T__44) | (1 << jmmParser.T__45) | (1 << jmmParser.ID) | (1 << jmmParser.INT) | (1 << jmmParser.CHAR) | (1 << jmmParser.STRING))) != 0):
                    self.state = 184
                    self.expression()


                self.state = 187
                self.match(jmmParser.T__1)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 188
                self.match(jmmParser.T__1)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 189
                self.statementExpression()
                self.state = 190
                self.match(jmmParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formalParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jmmParser.FormalParameterContext)
            else:
                return self.getTypedRuleContext(jmmParser.FormalParameterContext,i)


        def getRuleIndex(self):
            return jmmParser.RULE_formalParameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameters" ):
                listener.enterFormalParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameters" ):
                listener.exitFormalParameters(self)




    def formalParameters(self):

        localctx = jmmParser.FormalParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_formalParameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self.match(jmmParser.T__19)
            self.state = 203
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jmmParser.T__23) | (1 << jmmParser.T__24) | (1 << jmmParser.T__25) | (1 << jmmParser.ID))) != 0):
                self.state = 195
                self.formalParameter()
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==jmmParser.T__20:
                    self.state = 196
                    self.match(jmmParser.T__20)
                    self.state = 197
                    self.formalParameter()
                    self.state = 202
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 205
            self.match(jmmParser.T__21)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipe(self):
            return self.getTypedRuleContext(jmmParser.TipeContext,0)


        def ID(self):
            return self.getToken(jmmParser.ID, 0)

        def getRuleIndex(self):
            return jmmParser.RULE_formalParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameter" ):
                listener.enterFormalParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameter" ):
                listener.exitFormalParameter(self)




    def formalParameter(self):

        localctx = jmmParser.FormalParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_formalParameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.tipe()
            self.state = 208
            self.match(jmmParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
